// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > smtp > smtp > that an email is sent after a response for a an access request review 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after a response for a release review 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has begun 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has complete 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent after an import has failed 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent for Access Request Reviews 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent for Release Reviews 1`] = `
[
  {
    "bcc": [
      "email@email.com",
    ],
    "from": ""Bailo 📝" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
  },
]
`;

exports[`services > smtp > smtp > that sendEmail is called for each member of a group entity 1`] = `
[
  [
    {
      "bcc": [
        "member1@email.com",
        "member2@email.com",
      ],
      "from": ""Bailo 📝" <bailo@example.org>",
      "html": "html",
      "subject": "subject",
      "text": "text",
    },
  ],
]
`;
